<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LZHMusic</string>
    <string name="begin_app">开启我的音乐之旅</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="music_list">本地歌曲列表</string>
    <string name="list_top_song">本地音乐</string>
    <string name="list_top_artist">艺术家</string>
    <string name="list_top_album">专辑</string>
    <string name="home_fav">我的收藏</string>
    <string name="home_music">本地音乐</string>
    <string name="home_list">快速播放</string>
    <string name="fav_info">收藏列表空空如也哦！快去添加收藏吧！</string>
    <string name="title_activity_online_music">OnlineMusicActivity</string>
    <string name="net_title">新歌首发</string>
    <string name="net_rank">排行榜</string>
    <string name="title_activity_network_loading">NetworkLoadingActivity</string>
    <string name="loading_text">好音乐马上就来</string>
    <string name="init">Swift Music V2.0</string>
    <string name="download_manage">下载管理</string>
    <string name="manage">管理</string>
    <string name="confirm_delete">确认删除</string>
    <string name="title_activity_manage">ManageActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="selectAll">全选</string>
    <string name="settings">设置</string>
    <string name="online_music">在线音乐</string>
    <string name="hot">热门歌手</string>
    <string name="playlist">我的歌单</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="manage_playlist">新建歌单</string>
    <string name="confirm">确认</string>
    <string name="add_song">添加歌曲</string>
    <string name="title_activity_playlist_info">PlaylistInfoActivity</string>
    <string name="title_activity_add_song">AddSongActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="not_login">未登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login_tip">请输入用户名密码</string>
    <string name="register_tip">SwiftMusic帐号注册</string>
    <string name="other_tip">第三方帐号登录</string>
    <string name="login_qq_text">使用QQ帐号登录</string>
    <string name="login_weibo_text">使用微博帐号登录</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name_pwd_cant_empty">用户名或密码不能为空</string>
    <string name="pwd_confirm_failed">两次输入的密码不一致</string>
    <string name="uname_duplicate">用户名已经存在</string>
    <string name="register_success">注册成功</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="wrong_user">用户名或密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="title_activity_user_page">UserPageActivity</string>
    <string name="userinfo">个人主页</string>
    <string name="follow">关注</string>
    <string name="friend">下载</string>
    <string name="list">歌单</string>
    <string name="userinfo_fav">我最爱的</string>
    <string name="logoff">注销</string>
    <string name="settings_info">SwiftMusic V2.0</string>
    <string name="rank_mainland">巅峰大陆榜单</string>
    <string name="rank_taiwan">巅峰港台榜单</string>
    <string name="rank_us">巅峰欧美榜单</string>
    <string name="net_rankz">巅峰综合榜单</string>
    <string name="title_activity_singer">SingerActivity</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

</resources>