<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzh.activity.LoginActivity"
    android:orientation="vertical">
    
    <RelativeLayout
       android:id="@+id/login_titlebar"
       android:layout_height="0dp"
       android:layout_width="fill_parent"
       android:layout_weight="1.0"
       android:background="@drawable/titlebar">
       <ImageButton 
           android:id="@+id/back"
           android:layout_width="70dp"
           android:layout_height="55dp"
           android:layout_centerVertical="true"
           android:layout_marginLeft="5dp"
           android:background="@drawable/back_activity_btn"/>
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:textSize="16sp"
           android:text="@string/login"/>
    </RelativeLayout>
    
    <RelativeLayout 
       android:id="@+id/login_main"
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="9.0">
       <TextView 
           android:id="@+id/tip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:textColor="@color/app_green"
           android:text="@string/login_tip"
           android:layout_below="@+id/login_qq_text"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="30dp"/>
       <EditText 
           android:id="@+id/login_username"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:background="@drawable/edit_text_bg"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/tip"
           android:layout_marginTop="5dp"
           android:inputType="text"
           android:textSize="14sp"
           android:textColor="@color/app_green"
           android:hint="@string/username"
           android:paddingStart="4dp"/>
        <EditText 
           android:id="@+id/login_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:background="@drawable/edit_text_bg"
           android:textSize="14sp"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/login_username"
           android:layout_marginTop="5dp"
           android:textColor="@color/app_green"
           android:inputType="textPassword"
           android:hint="@string/password"
           android:paddingStart="4dp"/>
        <Button
           android:id="@+id/login"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/login"
           android:textColor="#ffffff"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/login_password"
           android:layout_marginTop="10dp"
           android:background="@drawable/login_btn_bg"
           android:padding="5dp"/>
        <Button
           android:id="@+id/register"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:textColor="#ffffff"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/login"
           android:layout_marginTop="5dp"
           android:background="@drawable/login_btn_bg"
           android:padding="5dp"/>
         <TextView 
           android:id="@+id/other_tip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:textColor="@color/app_green"
           android:text="@string/other_tip"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="10dp"/>
         <TextView 
           android:id="@+id/center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/tip"/>
         <ImageButton 
           android:id="@+id/login_weibo"
           android:layout_width="76dp"
           android:layout_height="76dp"
           android:background="@drawable/login_weibo"
           android:layout_toLeftOf="@+id/center"
           android:layout_below="@+id/other_tip"
           android:layout_marginRight="25dp"
           android:layout_marginTop="10dp"/>
         <TextView 
           android:id="@+id/login_weibo_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:textColor="@color/app_green"
           android:text="@string/login_weibo_text"
           android:layout_below="@+id/login_weibo"
           android:layout_alignLeft="@+id/login_weibo"/>
         <ImageButton 
           android:id="@+id/login_qq"
           android:layout_width="76dp"
           android:layout_height="76dp"
           android:background="@drawable/login_qq"
           android:layout_toRightOf="@+id/center"
           android:layout_below="@+id/other_tip"
           android:layout_marginLeft="25dp"
           android:layout_marginTop="10dp"/>
         <TextView 
           android:id="@+id/login_qq_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:text="@string/login_qq_text"
           android:textColor="@color/app_green"
           android:layout_below="@+id/login_qq"
           android:layout_alignLeft="@+id/login_qq"/>
    </RelativeLayout>


</LinearLayout>
