<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzh.activity.RegisterActivity"
    android:orientation="vertical">
    
     <RelativeLayout
       android:id="@+id/login_titlebar"
       android:layout_height="0dp"
       android:layout_width="fill_parent"
       android:layout_weight="1.0"
       android:background="@drawable/titlebar">
       <ImageButton 
           android:id="@+id/back"
           android:layout_width="70dp"
           android:layout_height="55dp"
           android:layout_centerVertical="true"
           android:layout_marginLeft="5dp"
           android:background="@drawable/back_activity_btn"/>
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:textSize="16sp"
           android:textColor="@color/app_green"
           android:text="@string/register"/>
    </RelativeLayout>
    
      <RelativeLayout 
       android:id="@+id/login_main"
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="9.0">
       <TextView 
           android:id="@+id/tip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:textColor="@color/app_green"
           android:text="@string/register_tip"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="30dp"/>
       <EditText 
           android:id="@+id/register_username"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:background="@drawable/edit_text_bg"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/tip"
           android:layout_marginTop="5dp"
           android:inputType="text"
           android:textSize="14sp"
           android:textColorHint="@color/app_green"
           android:textColor="@color/app_green"
           android:hint="@string/username"
           android:paddingStart="4dp"/>
        <EditText 
           android:id="@+id/register_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:background="@drawable/edit_text_bg"
           android:textSize="14sp"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/register_username"
           android:textColorHint="@color/app_green"
           android:layout_marginTop="5dp"
           android:textColor="@color/app_green"
           android:inputType="textPassword"
           android:hint="@string/password"
           android:paddingStart="4dp"/>
         <EditText 
           android:id="@+id/register_confirm_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:background="@drawable/edit_text_bg"
           android:textSize="14sp"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/register_password"
           android:textColorHint="@color/app_green"
           android:layout_marginTop="5dp"
           android:textColor="@color/app_green"
           android:inputType="textPassword"
           android:hint="@string/confirm_password"
           android:paddingStart="4dp"/>
        <Button
           android:id="@+id/register"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:textColor="#ffffff"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/register_confirm_password"
           android:layout_marginTop="5dp"
           android:background="@drawable/login_btn_bg"
           android:padding="5dp"/>
    </RelativeLayout>


</LinearLayout>
