<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   <RelativeLayout
       android:id="@+id/download_titlebar"
       android:layout_height="0dp"
       android:layout_width="fill_parent"
       android:layout_weight="1.0"
       android:background="@drawable/titlebar">
       <ImageButton 
           android:id="@+id/back"
           android:layout_width="70dp"
           android:layout_height="55dp"
           android:layout_centerVertical="true"
           android:layout_marginLeft="5dp"
           android:background="@drawable/back_activity_btn"/>
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:textSize="16sp"
           android:text="@string/home_fav"/>
    </RelativeLayout>
    
     <RelativeLayout
        android:id="@+id/controller_bar"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">
        <TextView
            android:id="@+id/fav_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/manage"
            android:layout_centerInParent="true"/>
     </RelativeLayout>
     
    <RelativeLayout 
        android:id="@+id/fav_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.0" >
      <TextView 
          android:id="@+id/fav_info"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textColor="#999999"
          android:layout_centerInParent="true"
          android:text="@string/fav_info"/>
      <ListView 
        android:id="@+id/fav_song_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:footerDividersEnabled="true"
        android:fadeScrollbars="true"
        android:listSelector="@drawable/music_list_selector">
    </ListView>
    </RelativeLayout>
</LinearLayout>